# libtheo

./: .gersemirc  .gitignore  CMakeLists.txt  README.md  dprint.json
.github/workflows/: cmake-multi-platform.yml
CLI/: CMakeLists.txt  cli.cpp
Compiler/: CMakeLists.txt
Compiler/docs/: grammar.md
Compiler/include/: ast.hpp  compiler.hpp  gen.hpp  lex.yy.h  lexer.hpp  lexextra.hpp  macro.hpp  parse.hpp  parse_error.hpp  parser.tab.h  scan.hpp  scanner_info.hpp  token.hpp
Compiler/include/ParserGenerator/: grammar.hpp  lrdea.hpp  lrparser.hpp
Compiler/src/: ast.cpp  compiler.cpp  gen.cpp  lex.yy.c  lexer.l  macro.cpp  parse.cpp  parser.tab.c  parser.y  scan.cpp
Compiler/src/ParserGenerator/: grammar.cpp  lrdea.cpp
Compiler/test/: CMakeLists.txt  elements_test.cpp  gen_test.cpp  grammar_test.cpp  hull_test.cpp  jump_test.cpp  lrparser_test.cpp  macro_application_test.cpp  macro_compilation_test.cpp  macro_extraction_test.cpp  parse_test.cpp  scan_test.cpp
VM/: CMakeLists.txt
VM/include/: instr.hpp  program.hpp  vm.hpp
VM/src/: instr.cpp  program.cpp  vm.cpp
VM/test/: CMakeLists.txt  instr_test.cpp
